--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Adding 3 starter.ipynb
+climate_starter.ipynb
+temp_analysis_bonus_1_starter.ipynb
+temp_analysis_bonus_2_starter.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
