--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Adding 3 starter.ipynb
-climate_starter.ipynb
-temp_analysis_bonus_1_starter.ipynb
-temp_analysis_bonus_2_starter.ipynb
+*climate_starter.ipynb
+*temp_analysis_bonus_1_starter.ipynb
+*temp_analysis_bonus_2_starter.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
